# CS305-Assignment-1

./: CMakeLists.txt  README.md  run.sh
data/: inputData.csv  inputFiles.csv  inputJobs.csv
output/: First-Fit.txt  Program-Output.txt  Worst-Fit.txt
src/: CMakeLists.txt  a.out  job.hpp  main.cpp  memoryAllocator.cpp  memoryAllocator.hpp  memoryDemo.cpp  memoryManager.cpp  memoryManager.hpp
